--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <body data-spy="scroll" data-target="#navbar" data-offset="150">
 
         <nav class="navbar navbar-light bg-faded navbar-fixed-top" id="navbar">
-          <a class="navbar-brand" href="#">MyApp</a>
+          <a class="navbar-brand" href="#">FRANDI</a>
           <ul class="nav navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="#jumbotron">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#about">Chi sono</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#footer">Download The App</a>
+              <a class="nav-link" href="#footer">Dove sono</a>
             </li>
           </ul>
           <form class="form-inline pull-xs-right">
@@ -33,10 +33,10 @@
         </nav>
 
         <div class="jumbotron" id="jumbotron">
-          <h1 class="display-3">My Awesome App!</h1>
-          <p class="lead">This is why YOU should download this fantastic app!</p>
+          <h1 class="display-3">Hello, I'm Frandi</h1>
+          <p class="lead">...and this is my portfolio</p>
           <hr class="m-y-2">
-          <p>Want to know more? Join our mailing list!</p>
+          <p>Contact me</p>
 
         <form class="form-inline">
           <div class="form-group">
@@ -55,7 +55,7 @@
         <div class="row" id="appSummary">
 
             <h1>Why This App Is Awesome</h1>
-            <p class="lead">Summary, once again, of your app's awesomeness</p>
+            <p class="lead">Lorem ipsum lorem ipsum</p>
 
           </div>
 
@@ -98,7 +98,7 @@
 
                 <h2>Download the app!</h2>
 
-            <p class="lead">Really, why should I download this app??</p>
+            <p class="lead">I'm on the App-Store</p>
 
             <p><a href=""><img id="appStoreIcon" src="App-Store-Icon.png"></a></p>
 
